<resources>
    <string name="app_name">Praktikum5</string>
    <string name="hint_input_prodi">Input Prodi</string>
    <string name="btn_prodi">BAWA DATA PRODI KE ACTIVITY LAIN</string>
    <string name="btn_call_browser">PANGGIL ITTELKOM-PWT.AC.ID</string>
    <string name="btn_call_camera">PANGGIL KAMERA</string>
    <string name="btn_call_phone">TELEPON</string>
    <string name="input_phone_number">Input Nomor Telepon</string>
    <string name="btn_fragment">Go To Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_first">Fragment Pertama</string>
    <string name="input_nama">Masukan Nama</string>
    <string name="input_nim">Masukan Nim</string>
    <string name="btn_to_second_fragment">BUKA FRAGMENT KEDUA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_second">Fragment Kedua</string>
    <string name="btn_kembali_beranda">Kembali</string>
</resources>